force-app/main/default/objects/TimesheetClockEvent__c/TimesheetClockEvent__c.object-meta.xml
<CustomObject>
    <label>Timesheet Clock Event</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>EventID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Clock Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>