force-app/main/default/objects/TimesheetClockEvent__c/fields/AppName__c.field-meta.xml
<CustomField>
    <fullName>AppName__c</fullName>
    <description>The app that created the record (i.e. Time Entry)(This field was created for NPL MA).</description>
    <label>App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>