force-app/main/default/objects/TimesheetClockEvent__c/fields/CenturiOutboundNotification__c.field-meta.xml
<CustomField>
    <fullName>CenturiOutboundNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shift entry which is sent to Outbound Notification table used by Mule(This field was created for NPL MA).</description>
    <label>Centuri Outbound Notification</label>
    <referenceTo>Centuri_Outbound_Notification__c</referenceTo>
    <relationshipLabel>Timesheet Clock Events</relationshipLabel>
    <relationshipName>Timesheet_Clock_Events</relationshipName>
    <type>Lookup</type>
</CustomField>