force-app/main/default/objects/TimesheetClockEvent__c/fields/EventTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>EventTimeStamp__c</fullName>
    <description>The date and time of the record(This field was created for NPL MA).</description>
    <label>Event Time Stamp</label>
    <type>DateTime</type>
</CustomField>