force-app/main/default/objects/TimesheetClockEvent__c/fields/EventTimeStampString__c.field-meta.xml
<CustomField>
    <fullName>EventTimeStampString__c</fullName>
    <label>EventTimeStampString</label>
    <length>128</length>
    <type>Text</type>
</CustomField>