force-app/main/default/objects/TimesheetClockEvent__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>The event type

P10 – clock in
P15 – unpaid break out
P20 – clock out
P25 – unpaid break in(This field was created for NPL MA).</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>clock_in</fullName>
                <label>P10</label>
            </value>
            <value>
                <fullName>unpaid_break_out</fullName>
                <label>P15</label>
            </value>
            <value>
                <fullName>clock_out</fullName>
                <label>P20</label>
            </value>
            <value>
                <fullName>unpaid_break_in</fullName>
                <label>P25</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>