force-app/main/default/objects/TimesheetClockEvent__c/fields/PersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonnelNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The date represents the lock out date from LockTime object(This field was created for NPL MA).</description>
    <label>Personnel Number</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Timesheet Clock Events</relationshipLabel>
    <relationshipName>Timesheet_Clock_Events</relationshipName>
    <type>Lookup</type>
</CustomField>