force-app/main/default/objects/TimesheetClockEvent__c/fields/UpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>UpdateFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(This field was created for NPL MA).</description>
    <label>Update Flag</label>
    <type>Checkbox</type>
</CustomField>