force-app/main/default/objects/TimesheetClockEvent__c/validationRules/Check_EventType.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_EventType</fullName>
    <active>true</active>
    <description>Event Type is Required</description>
    <errorConditionFormula>ISBLANK(TEXT(EventType__c))</errorConditionFormula>
    <errorDisplayField>EventType__c</errorDisplayField>
    <errorMessage>Event Type is Required</errorMessage>
</ValidationRule>