force-app/main/default/objects/TimesheetClockEvent__c/validationRules/Check_WorkDate_EventTimeStamp.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_WorkDate_EventTimeStamp</fullName>
    <active>true</active>
    <description>Work Date/Event Time Stamp is required</description>
    <errorConditionFormula>ISBLANK(EventTimeStamp__c)</errorConditionFormula>
    <errorDisplayField>EventTimeStamp__c</errorDisplayField>
    <errorMessage>Work Date/Event Time Stamp is required</errorMessage>
</ValidationRule>