force-app/main/default/objects/TimesheetClockEvent__c/validationRules/Test_TobeDeleted_Abort_save_changes_on_s.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_TobeDeleted_Abort_save_changes_on_s</fullName>
    <active>false</active>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>Testing System error - will be disabled in sometime</errorMessage>
</ValidationRule>