force-app/main/default/objects/TimesheetClockEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EventType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Timesheet__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>EventTimeStamp__c</columns>
    <columns>PersonnelNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EventTimeStampString__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PersonnelNumber__c</field>
        <operation>contains</operation>
        <value>Coulton</value>
    </filters>
    <label>All</label>
</ListView>